@@ -66,6 +66,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #24206: Fixed __eq__ and __ne__ methods of inspect classes.
+
 - Issue #21750: mock_open.read_data can now be read from each instance, as it
   could in Python 3.3.
 
